Solving color contrast issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  /*changing color to white to solve contrast issue*/
+  color: white;
   font-size: 1em;
   letter-spacing: 1px;
   padding: 25px 0;
@@ -180,7 +181,8 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  /*change background-color to improve the contrast*/
+  background-color: #093145;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
